Hands-on 3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> expression
Rule 1     expression -> expression AND term
Rule 2     expression -> expression OR term
Rule 3     expression -> term
Rule 4     term -> NOT factor
Rule 5     term -> factor
Rule 6     factor -> LPAREN expression RPAREN
Rule 7     factor -> BOOLEAN

Terminals, with rules where they appear

AND                  : 1
BOOLEAN              : 7
LPAREN               : 6
NOT                  : 4
OR                   : 2
RPAREN               : 6
error                : 

Nonterminals, with rules where they appear

expression           : 1 2 6 0
factor               : 4 5
term                 : 1 2 3

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . expression AND term
    (2) expression -> . expression OR term
    (3) expression -> . term
    (4) term -> . NOT factor
    (5) term -> . factor
    (6) factor -> . LPAREN expression RPAREN
    (7) factor -> . BOOLEAN

    NOT             shift and go to state 3
    LPAREN          shift and go to state 5
    BOOLEAN         shift and go to state 6

    expression                     shift and go to state 1
    term                           shift and go to state 2
    factor                         shift and go to state 4

state 1

    (0) S' -> expression .
    (1) expression -> expression . AND term
    (2) expression -> expression . OR term

    AND             shift and go to state 7
    OR              shift and go to state 8


state 2

    (3) expression -> term .

    AND             reduce using rule 3 (expression -> term .)
    OR              reduce using rule 3 (expression -> term .)
    $end            reduce using rule 3 (expression -> term .)
    RPAREN          reduce using rule 3 (expression -> term .)


state 3

    (4) term -> NOT . factor
    (6) factor -> . LPAREN expression RPAREN
    (7) factor -> . BOOLEAN

    LPAREN          shift and go to state 5
    BOOLEAN         shift and go to state 6

    factor                         shift and go to state 9

state 4

    (5) term -> factor .

    AND             reduce using rule 5 (term -> factor .)
    OR              reduce using rule 5 (term -> factor .)
    $end            reduce using rule 5 (term -> factor .)
    RPAREN          reduce using rule 5 (term -> factor .)


state 5

    (6) factor -> LPAREN . expression RPAREN
    (1) expression -> . expression AND term
    (2) expression -> . expression OR term
    (3) expression -> . term
    (4) term -> . NOT factor
    (5) term -> . factor
    (6) factor -> . LPAREN expression RPAREN
    (7) factor -> . BOOLEAN

    NOT             shift and go to state 3
    LPAREN          shift and go to state 5
    BOOLEAN         shift and go to state 6

    expression                     shift and go to state 10
    term                           shift and go to state 2
    factor                         shift and go to state 4

state 6

    (7) factor -> BOOLEAN .

    AND             reduce using rule 7 (factor -> BOOLEAN .)
    OR              reduce using rule 7 (factor -> BOOLEAN .)
    $end            reduce using rule 7 (factor -> BOOLEAN .)
    RPAREN          reduce using rule 7 (factor -> BOOLEAN .)


state 7

    (1) expression -> expression AND . term
    (4) term -> . NOT factor
    (5) term -> . factor
    (6) factor -> . LPAREN expression RPAREN
    (7) factor -> . BOOLEAN

    NOT             shift and go to state 3
    LPAREN          shift and go to state 5
    BOOLEAN         shift and go to state 6

    term                           shift and go to state 11
    factor                         shift and go to state 4

state 8

    (2) expression -> expression OR . term
    (4) term -> . NOT factor
    (5) term -> . factor
    (6) factor -> . LPAREN expression RPAREN
    (7) factor -> . BOOLEAN

    NOT             shift and go to state 3
    LPAREN          shift and go to state 5
    BOOLEAN         shift and go to state 6

    term                           shift and go to state 12
    factor                         shift and go to state 4

state 9

    (4) term -> NOT factor .

    AND             reduce using rule 4 (term -> NOT factor .)
    OR              reduce using rule 4 (term -> NOT factor .)
    $end            reduce using rule 4 (term -> NOT factor .)
    RPAREN          reduce using rule 4 (term -> NOT factor .)


state 10

    (6) factor -> LPAREN expression . RPAREN
    (1) expression -> expression . AND term
    (2) expression -> expression . OR term

    RPAREN          shift and go to state 13
    AND             shift and go to state 7
    OR              shift and go to state 8


state 11

    (1) expression -> expression AND term .

    AND             reduce using rule 1 (expression -> expression AND term .)
    OR              reduce using rule 1 (expression -> expression AND term .)
    $end            reduce using rule 1 (expression -> expression AND term .)
    RPAREN          reduce using rule 1 (expression -> expression AND term .)


state 12

    (2) expression -> expression OR term .

    AND             reduce using rule 2 (expression -> expression OR term .)
    OR              reduce using rule 2 (expression -> expression OR term .)
    $end            reduce using rule 2 (expression -> expression OR term .)
    RPAREN          reduce using rule 2 (expression -> expression OR term .)


state 13

    (6) factor -> LPAREN expression RPAREN .

    AND             reduce using rule 6 (factor -> LPAREN expression RPAREN .)
    OR              reduce using rule 6 (factor -> LPAREN expression RPAREN .)
    $end            reduce using rule 6 (factor -> LPAREN expression RPAREN .)
    RPAREN          reduce using rule 6 (factor -> LPAREN expression RPAREN .)

